--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap"
             rel="stylesheet"
         />
+        <link rel="icon" type="image/x-icon" href="/Logo Favicon.png" />
         <title>pro3dsky</title>
     </head>
     <body>
